--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Meghaan Binkley-Hopper\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num result is  3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 6/2\n",
+    "print(\"num result is \", num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +58,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Factorial of  1  is 1\n",
+      "The Factorial of  2  is 2\n",
+      "The Factorial of  3  is 6\n",
+      "The Factorial of  4  is 24\n",
+      "The Factorial of  5  is 120\n",
+      "The Factorial of  6  is 720\n",
+      "The Factorial of  7  is 5040\n",
+      "The Factorial of  8  is 40320\n",
+      "The Factorial of  9  is 362880\n",
+      "The Factorial of  10  is 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "for n in myList:\n",
+    "    factorial=1\n",
+    "    i=1\n",
+    "    while i <= n:\n",
+    "        factorial=factorial*i\n",
+    "        i=i+1\n",
+    "    print(\"The Factorial of \", n, \" is\", factorial)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,11 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "def averageValue (the_list):\n",
+    "    listSum = 0\n",
+    "    for value in the_list:\n",
+    "        listSum += value\n",
+    "    average = listSum/len(the_list)\n",
+    "    return average\n",
+    "\n",
+    "print(averageValue(testlist))\n",
+    "        "
    ]
   },
   {
@@ -82,13 +138,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     average \u001b[38;5;241m=\u001b[39m listSum\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(the_list)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m average\n\u001b[1;32m---> 12\u001b[0m newlist1\u001b[38;5;241m=\u001b[39m\u001b[43mlist1\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43maverageValue\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlist1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(newlist1)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "# the variances of both lists should be relatively close to 1 (off by less than .15)\n",
+    "\n",
+    "def averageValue (the_list):\n",
+    "    listSum = 0\n",
+    "    for value in the_list:\n",
+    "        listSum += value\n",
+    "    average = listSum/len(the_list)\n",
+    "    return average\n",
+    "\n",
+    "avglist1 = averageValue(list1)\n",
+    "newlist1=[]\n",
+    "for i in list1:\n",
+    "    \n",
+    "\n",
+    "avglist2 = averageValue(list2)\n",
+    "\n"
    ]
   },
   {
@@ -105,10 +188,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 17, 33, 4]\n",
+      "[0, 48, 37, 8, 1]\n",
+      "[1, 8, 37, 48, 0, 25, 9, 78, 109, 20, 4, 33, 17, 4, 2]\n",
+      "[2, 17, 4, 109, 9, 0, 37, 1]\n",
+      "[2, 33, 109, 25, 37]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [2, 4, 17, 33, 4, 20, 109, 78, 9, 25, 0, 48, 37, 8, 1] \n",
+    "print(myList[0:5:1])\n",
+    "print(myList[10:15:1])\n",
+    "print(myList[::-1])\n",
+    "print(myList[::2])\n",
+    "print(myList[::3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +228,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Web Mining and Applied NLP', 'course number': '44-620', 'semester': 'fall 2022', 'credit hours': '3', 'course learning objectives': ['Manage Python libraries and packages', 'Interact with hosted Version Control Systems', 'Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form', 'Describe the steps in a basic Natural Language Processing (NLP) Pipeline', 'Use preexisting tools and software libraries to perform some NLP, such as sentiment analysis', 'Explain results and conclusions drawn from visualized information']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "classDict = {'name': 'Web Mining and Applied NLP', 'course number': '44-620', \n",
+    "             'semester': 'fall 2022', 'credit hours': '3',\n",
+    "             'course learning objectives': ['Manage Python libraries and packages', 'Interact with hosted Version Control Systems',\n",
+    "                                            'Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form',\n",
+    "                                            'Describe the steps in a basic Natural Language Processing (NLP) Pipeline', \n",
+    "                                            'Use preexisting tools and software libraries to perform some NLP, such as sentiment analysis',\n",
+    "                                            'Explain results and conclusions drawn from visualized information']}\n",
+    "print(classDict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,9 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
     "player_character = {'name': 'Kitab',\n",
     "                   'class': [('Cleric: Knowledge', 7)],\n",
@@ -151,7 +278,8 @@
     "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
     "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
     "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "                   }\n",
+    "print(player_character['spells']['level 3'])"
    ]
   },
   {
@@ -163,11 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Unique Values:  12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "print('Number of Unique Values: ', len(set(values)))"
    ]
   },
   {
@@ -188,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
